make page size a config setting

--- a/config.yml
+++ b/config.yml
@@ -2,6 +2,7 @@ appname: "EABShortener"
 charset: "UTF-8"
 template: "template_toolkit"
 layout: "main"
+page_size: 25
 engines:
   template_toolkit:
     encoding:  'utf8'
